--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img class=" w-md-25 w-100 "  src="/img/output-onlinepngtools.png" alt="">
   </section> -->
 
-  <!-- <section class=" mainSection container w-100 d-flex flex-md-row flex-column-reverse justify-content-center align-items-center ">
+  <section class=" mainSection container w-100 d-flex flex-md-row flex-column-reverse justify-content-center align-items-center ">
     <div class="left w-md-50 w-100 p-md-5 p-2">
       <h1>
         Increase your web traffic with our
@@ -120,7 +120,7 @@
         <img src="img/Instagram.png" class="img-fluid" alt="" />
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!----------------------------- MANAGEMENT TYPES  -------------------------->
 
