--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
       </li>
     </ul>
     <hr>
-    <div class="d-flex w-100 justify-content-between align-items-center flex-column flex-md-row text-center">
+    <div class="d-flex w-100 justify-content-between align-items-center flex-column-reverse flex-md-row text-center">
       <p class="">
         Copyright © 2023 nuvosa, All rights reserved.
       </p>
