--- a/index.html
+++ b/index.html
@@ -67,16 +67,15 @@
             </li>
           </ul>
         </div>
-        <div class="d-flex" role="search">
+        <div class="d-flex gap-1" role="search">
           <a
             href="#"
             class="scr-hover d-flex justify-content-center align-items-center border border-black p-2 nav-link active me-2"
           >
             lets Talk
-          </a>
-          <a href="#" class="btn btn-warning">
-            <i class="fas fal fa-search"></i>
-          </a>
+        </a>
+        <input type="search" class="search-bar hide border border-black ">
+          <button class=" btn btn-warning search-button"> <i class="fas fal fa-search"></i> </button>
         </div>
       </div>
     </nav>
@@ -305,7 +304,7 @@
           </p>
           <a href="#"
             ><img
-              src="./img/management-types/Arrow-Right.png"
+              src="./img/management-types/arrow-Right.png"
               class="position-absolute bottom-0 end-0 p-2"
               alt="arrow"
           /></a>
@@ -326,7 +325,7 @@
           </p>
           <a href="#"
             ><img
-              src="./img/management-types/Arrow-Right.png"
+              src="./img/management-types/arrow-Right.png"
               class="position-absolute bottom-0 end-0 p-2"
               alt="arrow"
           /></a>
@@ -344,7 +343,7 @@
           </p>
           <a href="#"
             ><img
-              src="./img/management-types/Arrow-Right.png"
+              src="./img/management-types/arrow-Right.png"
               class="position-absolute bottom-0 end-0 p-2"
               alt="arrow"
           /></a>
